# open-coworker

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  package.json  pnpm-lock.yaml
apps/agent/: package.json  pyproject.toml
apps/agent/src/: config.py  main.py
apps/agent/src/agents/: __init__.py  orchestrator.py  sub_agent.py
apps/agent/src/api/: __init__.py  routes.py
apps/agent/tests/: __init__.py  test_api.py
apps/ui/: forge.config.cjs  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.main.config.ts  vite.renderer.config.ts
apps/ui/src/: electron.d.ts  vite-env.d.ts
apps/ui/src/main/: index.ts  preload.ts
apps/ui/src/renderer/: App.tsx  index.html  vite-env.d.ts
apps/ui/src/renderer/components/: ChatWindow.tsx
